# Sporthub-IoT-Lab

./: .gitignore  README.md  docker-compose.yml
frontdesk_registration_ui/: README.md  pubspec.yaml
frontdesk_registration_ui/android/app/: build.gradle.kts
frontdesk_registration_ui/android/app/src/main/: AndroidManifest.xml
frontdesk_registration_ui/ios/Runner/: Info.plist
frontdesk_registration_ui/ios/Runner.xcodeproj/: project.pbxproj
frontdesk_registration_ui/lib/: main.dart
frontdesk_registration_ui/linux/: CMakeLists.txt
frontdesk_registration_ui/linux/runner/: my_application.cc
frontdesk_registration_ui/macos/Runner.xcodeproj/: project.pbxproj
frontdesk_registration_ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontdesk_registration_ui/macos/Runner/Configs/: AppInfo.xcconfig
frontdesk_registration_ui/test/: widget_test.dart
frontdesk_registration_ui/web/: index.html  manifest.json
frontdesk_registration_ui/windows/: CMakeLists.txt
frontdesk_registration_ui/windows/runner/: Runner.rc  main.cpp
iot_api/: .env  iot_api.Dockerfile  main.py  pyproject.toml
iot_api/src/api/basemodel/: user.py
iot_api/src/api/routes/: user.py
iot_api/src/base/: config.py  user.py
iot_api/src/utils/: database.py  response.py
rfid_python_ui/: .env  main.py  main_cli.py  pyproject.toml  tya.py
rfid_reader/: pyproject.toml
rfid_tya_ui/: main.py  pyproject.toml
rfid_ui/: index.html  package-lock.json  package.json
rfid_ui/src/: App.jsx
rfid_ui/src/components/: SerialSimple.jsx
(+1 files in other folders)
