[project]
name = "iot-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=46.0.2",
    "fastapi>=0.118.2",
    "loguru>=0.7.3",
    "pymysql>=1.1.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
